fix: ui spacing

--- a/src/components/user/rich-text/ps.css
+++ b/src/components/user/rich-text/ps.css
@@ -1,15 +1,11 @@
 h1 {
-    font-size: 2em;
-    margin: 0.5em 0;
+  font-size: 2em;
 }
 
 h2 {
-    font-size: 1.5em;
-
-    margin: 0.5em 0;
+  font-size: 1.5em;
 }
 
 h3 {
-    font-size: 1.25em;
-    margin: 0.5em 0;
+  font-size: 1.25em;
 }
